--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BigTone</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/tailwind.css" />
+    <link rel="stylesheet" href="css/variables.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <script src="tailwind.config.js" type="text/javascript"></script>
   </head>
   <body class="overflow-x-hidden">
     <header
